--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <img id="printButton" src="248290EB-B1C9-4F58-91FE-D7714BE6F809.png" onclick="printPage()">
 
     <!-- 메인 이미지 -->
-    <img id="mainImage" src="KICE_score.png">
+    <img id="mainImage" src="IMG_4321.png">
 
 </body>
 </html>
